--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -25,11 +25,11 @@
   }
 
   .only-desktop {
-    display: block;
+    display: block !important;
   }
 
   .no-desktop {
-    display: none;
+    display: none!important;
   }
 
 
