--- a/scss/_s5.scss
+++ b/scss/_s5.scss
@@ -2,6 +2,41 @@
   position: relative;
   height: 100vh;
 
+  .overlay {
+    &::after {
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      pointer-events: none;
+      content: "";
+      position: absolute;
+      z-index: 100;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      bottom: -2.5px;
+      background: -o-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 75%,
+        rgba(16, 24, 32, 1) 100%
+      );
+      background: -webkit-gradient(
+        linear,
+        left top, left bottom,
+        from(rgba(255, 255, 255, 0)),
+        color-stop(75%, rgba(255, 255, 255, 0)),
+        to(rgba(16, 24, 32, 1))
+      );
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 75%,
+        rgba(16, 24, 32, 1) 100%
+      );
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#101820",GradientType=1);
+    }
+  }
+
   .main-article {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -12,6 +47,15 @@
     flex-direction: column;
     max-width: 780px;
     margin: 0 auto;
+    height: 80vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+      height: 0;
+    }
 
     article {
       display: -webkit-box;
