--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -1,6 +1,6 @@
 @import "./include-media";
 @import "./variables";
-@import "./blog-nav";
+@import "./light-nav";
 @import "./blog-header";
 @import "./blog-headline";
 @import "./blog-content";
