--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,6 @@
 @import "./include-media";
 @import "./variables";
-@import "./nav";
+@import "./dark-nav";
 @import "./s1";
 @import "./s2";
 @import "./s3";
