--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,9 @@
-.s6 {
+.footer {
   background: -o-linear-gradient(top, #3191a1 0%, #218c66 100%);
   background: -webkit-gradient(linear, left top, left bottom, from(#3191a1), to(#218c66));
   background: linear-gradient(180deg, #3191a1 0%, #218c66 100%);
-  // min-height: 475px;
+  height: 100%;
+  z-index: 100;
 
   .img-logo {
     width: 85px;
