--- a/scss/_blog-headline.scss
+++ b/scss/_blog-headline.scss
@@ -13,7 +13,7 @@
   .p {
     color: white;
     font-weight: weight(normal);
-    font-size: sizerem(regular);
+    font-size: sizerem(normal);
     line-height: 1.75;
   }
   .readmore {
