--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -16,7 +16,7 @@ body {
   font-family: "Montserrat";
 }
 
-.img-main-about {
+.img-main-contact {
   position: absolute;
   z-index: -1;
   overflow: hidden;
