--- a/scss/_s3.scss
+++ b/scss/_s3.scss
@@ -65,40 +65,33 @@
         color: white;
 
         .timeline-head {
-          margin-left: 20px;
           width: 70vw;
-          font-size: sizerem(large);
+          font-size: sizerem(normal);
+          line-height: 1.5;
           -webkit-transition: speed(slow);
           -o-transition: speed(slow);
           transition: speed(slow);
+          margin-left: 20px;
 
           &.th1 {
             font-weight: weight(bold);
           }
 
           @include media(">tablet") {
-            width: 45ch;
-            font-size: sizerem(larger);
-          }
-
-          @include media(">desktop") {
-            width: 100ch;
+            font-size: sizerem(large);
           }
         }
 
         .timeline-body {
           margin-left: 20px;
-          width: 60vw;
           font-size: sizerem(small);
           font-weight: weight(regular);
+          line-height: 2;
+          width: 60vw;
 
           @include media(">tablet") {
             font-size: sizerem(normal);
             width: 70vw;
-          }
-
-          @include media(">desktop") {
-            width: 85ch;
           }
         }
 
